# ner_visualizer

./: .gitignore  README.md  app.py  pyproject.toml
ner_visualize/: main.py  pyproject.toml  start_app.sh
ner_visualize/backend/: app.py  run_app.sh
ner_visualize/frontend/: package-lock.json  package.json
ner_visualize/frontend/src/: App.vue  main.js
ner_visualize/frontend/src/components/: ConfigPage.vue  TextDisplay.vue
ner_visualize/frontend/src/router/: index.js
ner_visualizer/: app.py  cache.py  compare.py  config.json  config.py  config_store.py  model_config.json  ner_utils.py  services.py
ner_visualizer/static/: styles.css
ner_visualizer/templates/: config.html  index.html
static/: styles.css
templates/: config.html  index.html
